# x86_64

./: .gitignore  .travis.yml  AUTHORS  Cargo.toml  Changelog.md  LICENSE  LICENSE-MIT  README.md  SECURITY.md  azure-pipelines.yml  bitflags.rs  bors.toml  build.rs  flake.nix  lib.rs  typos.toml  update_perfmon_db.sh  x86.rs  x86_shared.rs
.github/: dependabot.yml
.github/workflows/: automerge.yml  build.yml  debug.yml  dependabot.yml  release.yml
idt-general-handler/: Cargo.toml
idt-general-handler/src/: lib.rs
scripts/: ci-release.py
src/: addr.rs  address.rs  bitflags.rs  control_regs.rs  controlregs.rs  cpuid.rs  descriptor.rs  descriptors.rs  dtables.rs  flags.rs  gdt.rs  idt.rs  instructions.rs  io.rs  irq.rs  lib.rs  mem.rs  msr.rs  ops.rs  paging.rs  rflags.rs  segmentation.rs  sgx.rs  syscall.rs  task.rs  testing.rs  time.rs  tlb.rs  tss.rs  x86.rs  x86_64.rs  x86_shared.rs
src/addr/: mod.rs  ptr.rs
src/asm/: asm.s  mod.rs
src/bits16/: mod.rs  segmentation.rs
src/bits32/: dtables.rs  eflags.rs  irq.rs  mod.rs  segmentation.rs  task.rs
src/bits64/: controlregs.rs  dtables.rs  irq.rs  mod.rs  paging.rs  registers.rs  rflags.rs  segmentation.rs  sgx.rs  syscall.rs  task.rs  tlb.rs  tobba.rs
src/instructions/: interrupts.rs  mod.rs  port.rs  random.rs  segmentation.rs  smap.rs  tables.rs  tlb.rs  tls.rs
src/instructions/sgx/: enclu.rs  mod.rs
src/perfcnt/: mod.rs
src/perfcnt/intel/: counters.rs  description.rs  mod.rs
src/random/: mod.rs
src/registers/: control.rs  control_regs.rs  debug.rs  flags.rs  mod.rs  model_specific.rs  msr.rs  mtrr.rs  mxcsr.rs  rflags.rs  segmentation.rs  xcontrol.rs
src/registers/msr/: efer.rs  mod.rs
src/shared/: control_regs.rs  descriptor.rs  dtables.rs  flags.rs  io.rs  irq.rs  mod.rs  msr.rs  segmentation.rs  task.rs
src/structures/: amd_sev.rs  gdt.rs  idt.rs  mem_encrypt.rs  mod.rs  port.rs  sgx.rs  tss.rs
src/structures/paging/: frame.rs  frame_alloc.rs  mod.rs  ops.rs  page.rs  page_table.rs  recursive.rs
test_harness/: Cargo.toml
test_harness/src/: lib.rs
test_macros/: Cargo.toml
test_macros/src/: lib.rs
testing/: Cargo.toml  x86_64-bare-metal.json
testing/.cargo/: config  config.toml
testing/src/: gdt.rs  lib.rs  serial.rs  tests.rs
testing/tests/: basic_boot.rs  breakpoint_exception.rs  double_fault_stack_overflow.rs  interrupt_handling.rs  port_read_write.rs
tests/: no_std_build.rs
tests/kvm/: bin.rs
tobba/src/: lib.rs  x86.rs  x86_64.rs  x86_shared.rs
x86_64-idt-default-handler/: Cargo.toml
x86_64-idt-default-handler/src/: lib.rs
x86data/perfmon_data/: TMAM_Metrics.csv  TMAM_Metrics.xlsx  mapfile.csv  readme.txt  secure-pmu-access-1.0.csv
x86data/perfmon_data/BDW/: Broadwell_FP_ARITH_INST_V11.tsv  Broadwell_FP_ARITH_INST_V17.json  Broadwell_FP_ARITH_INST_V17.tsv  Broadwell_core_V11.json  Broadwell_core_V11.tsv  Broadwell_core_V17.json  Broadwell_core_V17.tsv  Broadwell_matrix_V11.tsv  Broadwell_matrix_V17.json  Broadwell_matrix_V17.tsv  Broadwell_matrix_bit_definitions_V11.json  Broadwell_matrix_bit_definitions_V11.tsv  Broadwell_matrix_bit_definitions_V17.json  Broadwell_matrix_bit_definitions_V17.tsv  Broadwell_offcore_V11.tsv  Broadwell_offcore_V17.tsv  Broadwell_uncore_V11.json  Broadwell_uncore_V11.tsv  Broadwell_uncore_V17.tsv
x86data/perfmon_data/BDW-DE/: BroadwellDE_core_V1.json  BroadwellDE_core_V1.tsv  BroadwellDE_core_V5.json  BroadwellDE_core_V5.tsv  BroadwellDE_matrix_bit_definitions_V5.json  BroadwellDE_matrix_bit_definitions_V5.tsv  BroadwellDE_uncore_V1.json  BroadwellDE_uncore_V1.tsv  BroadwellDE_uncore_V5.tsv
x86data/perfmon_data/BDX/: BroadwellX_core_V10.json  BroadwellX_core_V10.tsv  BroadwellX_matrix_V10.json  BroadwellX_matrix_V10.tsv  BroadwellX_matrix_bit_definitions_V10.json  BroadwellX_matrix_bit_definitions_V10.tsv  BroadwellX_offcore_V10.tsv  BroadwellX_uncore_V10.json  BroadwellX_uncore_V10.tsv
x86data/perfmon_data/BNL/: Bonnell_core_V1.json  Bonnell_core_V1.tsv  Bonnell_core_V4.tsv
x86data/perfmon_data/GLM/: Goldmont_core_V8.json  Goldmont_core_V8.tsv  Goldmont_matrix_V8.json  Goldmont_matrix_V8.tsv  Goldmont_matrix_bit_definitions_V8.json  Goldmont_matrix_bit_definitions_V8.tsv  Goldmont_offcore_V8.tsv
x86data/perfmon_data/HSW/: Haswell_core_V20.json  Haswell_core_V20.tsv  Haswell_core_V24.json  Haswell_core_V24.tsv  Haswell_matrix_V20.tsv  Haswell_matrix_V24.json  Haswell_matrix_V24.tsv  Haswell_matrix_bit_definitions_V20.json  Haswell_matrix_bit_definitions_V20.tsv  Haswell_matrix_bit_definitions_V24.json  Haswell_matrix_bit_definitions_V24.tsv  Haswell_offcore_V20.tsv  Haswell_offcore_V24.tsv  Haswell_uncore_V20.json  Haswell_uncore_V20.tsv  Haswell_uncore_V24.tsv
x86data/perfmon_data/HSX/: HaswellX_core_V14.json  HaswellX_core_V14.tsv  HaswellX_core_V17.json  HaswellX_core_V17.tsv  HaswellX_matrix_V14.json  HaswellX_matrix_V14.tsv  HaswellX_matrix_V17.json  HaswellX_matrix_V17.tsv  HaswellX_matrix_bit_definitions_V14.json  HaswellX_matrix_bit_definitions_V14.tsv  HaswellX_matrix_bit_definitions_V17.json  HaswellX_matrix_bit_definitions_V17.tsv  HaswellX_offcore_V14.tsv  HaswellX_offcore_V17.tsv  HaswellX_uncore_V14.json  HaswellX_uncore_V14.tsv  HaswellX_uncore_V17.json  HaswellX_uncore_V17.tsv
x86data/perfmon_data/IVB/: IvyBridge_core_V15.json  IvyBridge_core_V15.tsv  IvyBridge_core_V18.json  IvyBridge_core_V18.tsv  IvyBridge_matrix_V15.tsv  IvyBridge_matrix_V18.tsv  IvyBridge_matrix_bit_definitions_V15.json  IvyBridge_matrix_bit_definitions_V15.tsv  IvyBridge_matrix_bit_definitions_V18.json  IvyBridge_matrix_bit_definitions_V18.tsv  IvyBridge_offcore_V15.tsv  IvyBridge_offcore_V18.tsv  IvyBridge_uncore_V15.json  IvyBridge_uncore_V15.tsv  IvyBridge_uncore_V18.tsv
x86data/perfmon_data/IVT/: IvyTown_core_V17.json  IvyTown_core_V17.tsv  IvyTown_core_V19.json  IvyTown_core_V19.tsv  IvyTown_matrix_V17.json  IvyTown_matrix_V17.tsv  IvyTown_matrix_V19.tsv  IvyTown_matrix_bit_definitions_V17.json  IvyTown_matrix_bit_definitions_V17.tsv  IvyTown_matrix_bit_definitions_V19.json  IvyTown_matrix_bit_definitions_V19.tsv  (+6 more)
(+102 files in other folders)
