[package]
authors = [
    "Gerd Zellweger <mail@gerdzellweger.com>",
    "Eric Kidd <git@randomhacks.net>",
    "Philipp Oppermann <dev@phil-opp.com>",
    "Dan Schatzberg <schatzberg.dan@gmail.com>",
    "John Ericson <John_Ericson@Yahoo.com>",
    "Rex Lunae <rexlunae@gmail.com>",
]
description = "Support for x86_64 specific instructions, registers, and structures."
documentation = "https://docs.rs/x86_64"
keywords = [
    "amd64",
    "x86",
    "x86_64",
    "no_std",
]
categories = [
    "no-std",
]
license = "MIT/Apache-2.0"
name = "x86_64"
readme = "README.md"
repository = "https://github.com/rust-osdev/x86_64"
version = "0.12.3"
edition = "2018"

[dependencies]
bit_field = "0.9.0"
bitflags = "1.0.4"

[build-dependencies]
cc = { version = "1.0.37", optional = true }

[features]
default = [ "nightly", "instructions" ]
instructions = []
deny-warnings = []
external_asm = [ "cc" ]
nightly = [ "inline_asm", "const_fn", "abi_x86_interrupt" ]
inline_asm = []
abi_x86_interrupt = []
const_fn = []

[package.metadata.release]
no-dev-version = true
pre-release-replacements = [
    { file="Changelog.md", search="# Unreleased", replace="# Unreleased\n\n# {{version}} – {{date}}", exactly=1 },
]
pre-release-commit-message = "Release version {{version}}"
disable-push = true
disable-publish = true
