[package]
authors = [
    "Gerd Zellweger <mail@gerdzellweger.com>",
    "Eric Kidd <git@randomhacks.net>",
    "Philipp Oppermann <dev@phil-opp.com>",
    "Dan Schatzberg <schatzberg.dan@gmail.com>",
    "John Ericson <John_Ericson@Yahoo.com>",
    "Rex Lunae <rexlunae@gmail.com>",
]
description = "Support for x86_64 specific instructions, registers, and structures."
documentation = "https://docs.rs/x86_64"
keywords = ["amd64", "x86", "x86_64", "no_std"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
name = "x86_64"
readme = "README.md"
repository = "https://github.com/rust-osdev/x86_64"
version = "0.15.4"
edition = "2018"
rust-version = "1.59" # Needed to support inline asm and default const generics

[dependencies]
bit_field = "0.10.1"
bitflags = "2.3.2"
volatile = "0.4.4"
rustversion = "1.0.5"
dep_const_fn = { package = "const_fn", version = "0.4.11" }

[features]
default = ["nightly", "instructions"]
instructions = []
memory_encryption = []
nightly = ["const_fn", "step_trait", "abi_x86_interrupt", "asm_const"]
abi_x86_interrupt = []
asm_const = []
step_trait = []
doc_cfg = []

# These are deprecated and no longer needed:
const_fn = []
doc_auto_cfg = []

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
dev-version = false
pre-release-replacements = [
    { file = "Changelog.md", search = "# Unreleased", replace = "# Unreleased\n\n# {{version}} – {{date}}", exactly = 1 },
]
pre-release-commit-message = "Bump version to {{version}}"
push = false
publish = false
tag = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
