[package]
name = "x86_64-idt-general-handler"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.33", features = ["full"] }
quote = "1.0.7"
proc-macro2 = "1.0.18"
