[package]
name = "testing"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

[dependencies]
bootloader = "0.5.3"
uart_16550 = "0.1.0"
spin = "0.4.8"

[dependencies.x86_64]
path = ".."

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "x86_64-bare-metal.json"