[package]
name = "testing"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

[[test]]
name = "breakpoint_exception"
harness = false

[[test]]
name = "port_read_write"
harness = false

[[test]]
name = "double_fault_stack_overflow"
harness = false

[dependencies]
bootloader = "0.9.10"
uart_16550 = "0.2.8"
spin = "0.5.0"

# Overwrite the x86_64 crate for both direct and indirect dependencies.
[dependencies.x86_64]
path = ".."
[patch.crates-io]
x86_64 = { path = ".." }


[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
